--- a/SISINFOv2/app/src/main/res/layout/activity_main.xml
+++ b/SISINFOv2/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/status_bar_height">
+        
+        <FrameLayout
+            android:id="@+id/fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></FrameLayout>
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -34,15 +39,6 @@
             android:elevation="4dp"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:theme="@style/ToolbarTheme" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Inbox"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="@color/md_text" />
 
     </FrameLayout>
 
