--- a/SISINFOv2/app/src/main/res/layout/fragment_contacto.xml
+++ b/SISINFOv2/app/src/main/res/layout/fragment_contacto.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/lince">
 
-    <TextView
+    <!--<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -11,5 +12,55 @@
         android:id="@+id/textViewInboxFragment"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="159dp" />
+        android:layout_marginBottom="159dp" />-->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Para"
+        android:id="@+id/txtPara"
+        android:layout_marginTop="66dp"/>
+
+    <EditText
+        android:id="@+id/edtPara"
+        android:layout_below="@+id/txtPara"
+        android:hint="Correo receptor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:layout_marginBottom="20dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Asunto"
+        android:id="@+id/txtAsunto"
+        android:layout_below="@+id/edtPara" />
+
+    <EditText
+        android:id="@+id/edtAsunto"
+        android:layout_below="@+id/txtAsunto"
+        android:hint="Asunto del correo"
+        android:inputType="textEmailSubject"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"/>
+
+    <EditText
+        android:id="@+id/edtBody"
+        android:layout_below="@+id/edtAsunto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btnEnviarCorreo"
+        android:layout_marginTop="10dp"
+        android:layout_width="300dp"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:text="Enviar"
+        android:textSize="20dp"
+        android:layout_below="@+id/edtBody"
+        android:background="@color/md_green_800"
+        android:textColor="@color/md_white_1000"/>
+
 </RelativeLayout>
