Envio de correo
Se envia el correo con la aplicacion externa

--- a/SISINFOv2/app/src/main/res/layout/fragment_contacto.xml
+++ b/SISINFOv2/app/src/main/res/layout/fragment_contacto.xml
@@ -21,10 +21,10 @@
         android:id="@+id/txtPara"
         android:layout_marginTop="66dp"/>
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/edtPara"
         android:layout_below="@+id/txtPara"
-        android:hint="Correo receptor"
+        android:hint="Correo del docente"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
