--- a/SISINFOv2/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/SISINFOv2/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -13,8 +13,8 @@
         <menu>
             <item
                 android:id="@+id/item_navigation_drawer_contact"
-                android:icon="@drawable/ic_mail_black_24dp"
-                android:title="Contacto" />
+                android:icon="@drawable/ic_dvr_black_24dp"
+                android:title="Sistema Integral" />
                <item
                 android:id="@+id/item_navigation_drawer_help_and_feedback"
                 android:icon="@drawable/ic_facebook2"
